tests/fixtures/invalid/pow_int_none_int.py
# Cannot call pow() with Int, None, Int
x = pow(1, None, 1)
